--- a/index.html
+++ b/index.html
@@ -679,10 +679,7 @@
         <li>Indian Succession Act, 1925 Pt V Chapter III</li>
     </ol>
             </div>
-             <div class="blog-post">
-                <h3>Understanding the Concept of Per Stirpes</h3>
-                <p>Dive into the legal principle of 'per stirpes' (by branch), which is a cornerstone of Parsi succession law. This article explains how the share of a predeceased child is distributed among their own children, ensuring that the inheritance stays within the family branch.</p>
-            </div>
+             
         </div>
 
         <div id="workbook" class="tab-content">
@@ -856,12 +853,11 @@
                     </ul>
 
                     <h3>Distribution of Predeceased Daughter Delnaz's Share (₹50 Crore)</h3>
-                    <p>Noshirwan's predeceased daughter, Delnaz, will have her share divided among her husband (Zubin) and her children (Armin, Cyrus, and Nina), as per Sections 53(b) and 51(a). Note: The prompt states that the share would be divided amongst her husband and children, but according to the correct law (Section 53(b)), the share would be divided amongst her children and the widow/widower of the predeceased child receives a specific share. Assuming the division is equal for simplicity, based on the prompt's provided figures:</p>
+                    <p>Noshirwan's predeceased daughter, Delnaz, will have her share divided among her children (Armin, Cyrus, and Nina), as per Sections 53(b). Note: The prompt states that the share would be divided amongst her husband and children, but according to the correct law (Section 53(b)), the share would be divided amongst her children and the widow/widower of the predeceased child receives a specific share. Assuming the division is equal for simplicity, based on the prompt's provided figures:</p>
                     <ul class="sub-list">
-                        <li><strong>Zubin (husband):</strong> ₹12.5 Crore</li>
-                        <li><strong>Armin (son):</strong> ₹12.5 Crore</li>
-                        <li><strong>Cyrus (son):</strong> ₹12.5 Crore</li>
-                        <li><strong>Nina (daughter):</strong> ₹12.5 Crore</li>
+                        <li><strong>Armin (son):</strong> ₹16.66 Crore</li>
+                        <li><strong>Cyrus (son):</strong> ₹16.66 Crore</li>
+                        <li><strong>Nina (daughter):</strong> ₹16.66f Crore</li>
                     </ul>
 
                     <h2>Status of Other Relatives</h2>
